# pytest-sqlfluff

./: LICENSE  README.rst  appveyor.yml  mkdocs.yml  pyproject.toml  pytest_sqlfluff.py  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci-flow.yml
docs/: index.md
tests/: conftest.py  test_sqlfluff.py
