[tool.poetry]
name = "pytest-sqlfluff"
version = "0.1.1"
description = "A pytest plugin to use sqlfluff to enable format checking of sql files."
authors = ["Paul Sutherland <paul@homemade-logic.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "pytest_sqlfluff.py"}]
classifiers=[
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7.2"
pytest = ">=3.5.0"
sqlfluff = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
black = "22.12.0"
pylint = "2.15.9"
pytest-black = "0.3.12"
pytest-pylint = "0.19.0"

[tool.poetry.plugins.pytest11]
sqlfluff = "pytest_sqlfluff"

[tool.black]
target-version = ['py310']

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable = "C0330, C0326"
# Differences with black's autoformatter
# C0330: Wrong hanging indentation before block
# C0326: Bad whitespace

[tool.pytest.ini_options]
addopts = "--doctest-modules --black --pylint"
testpaths = [
    "pytest_sqlfluff.py",  # for doctests, black, pylint
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
